[package]
name = "tiny-cli"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/MarcusGrass/tiny-cli"
homepage = "https://github.com/MarcusGrass/tiny-cli"
description = "Tiny no-std rust arg parser"
documentation = "https://docs.rs/tiny-cli"
categories = ["no-std", "command-line-utilities"]
keywords = ["cli", "parser", "arg", "argument", "parse"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
unix-print = "0.1.0"
